update to 1.8