@@ -7,7 +7,7 @@ package com.mrcool.lambda;
 
 import java.io.IOException;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import org.junit.jupiter.api.Test;
 
@@ -21,17 +21,17 @@ public class LogDemoTests {
 
 	@Test
 	void test() throws IOException {
-		long result = Files.lines(Path.of("src/main/resources/sample-access.log")).count();
+		long result = Files.lines(Paths.get("src/main/resources/sample-access.log")).count();
 		System.out.println("Found " + result + " lines in the log file.");
 	}
 
 	@Test
 	void testFilter() throws IOException {
-		long result = Files.lines(Path.of("src/main/resources/sample-access.log")).filter(line -> line.contains("GET"))
-				.count();
+		long result = Files.lines(Paths.get("src/main/resources/sample-access.log"))
+				.filter(line -> line.contains("GET")).count();
 		System.out.println("Found " + result + " lines in the log file.");
 
-		result = Files.lines(Path.of("src/main/resources/sample-access.log"))
+		result = Files.lines(Paths.get("src/main/resources/sample-access.log"))
 				.filter(line -> line.contains("130.211.62.52")).count();
 		System.out.println("Found " + result + " requests from " + "130.211.62.52" + ".");
 	}
